--- a/pom.xml
+++ b/pom.xml
@@ -82,6 +82,14 @@
 			<artifactId>spring-webmvc</artifactId>
 			<version>5.3.14</version>
 		</dependency>
+
+		<!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-security -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
+			<version>2.6.2</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
